# Proyecto-Cinap

./: README.md  package.json
backend_fastapi/: .env.example  .gitignore  README.md  checkpoints.db-shm  checkpoints.db-wal  pyproject.toml  requirements.txt  timings.jsonl
backend_fastapi/app/domain/auth/: asesor_perfil.py  docente_perfil.py  user.py
backend_fastapi/app/domain/calendar/: event.py
backend_fastapi/app/entities/: event.py
backend_fastapi/app/frameworks_drivers/config/: db.py  settings.py
backend_fastapi/app/frameworks_drivers/di/: container.py
backend_fastapi/app/frameworks_drivers/llm/: langgraph_agent.py  ollama_client.py
backend_fastapi/app/frameworks_drivers/mcp/: stdio_client.py
backend_fastapi/app/frameworks_drivers/orm/: models_auth.py
backend_fastapi/app/frameworks_drivers/web/: fastapi_app.py  rate_limit.py  semantic.py
backend_fastapi/app/interface_adapters/controllers/: admin_advisors_router.py  admin_catalog_router.py  admin_location_router.py  admin_teachers_router.py  advisor_catalog_router.py  advisor_confirmations_router.py  asesorias_router.py  assistant_controller.py  auth_controller.py  auth_helpers.py  auth_router_factory.py  calendar_router.py  dashboard_controller.py  google_calendar_webhook.py  profile_router.py  slots_router.py  teacher_confirmations_router.py  telegram_link_router.py  telegram_webhook.py
backend_fastapi/app/interface_adapters/orm/: models_asesor.py  models_auth.py  models_docente.py  models_scheduling.py  models_telegram.py
backend_fastapi/app/observability/: confirm_store.py  metrics.py  metrics_llm.py  middleware.py  telegram_analyzer.py
mcp_server/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
mcp_server/entities/: event.py
mcp_server/frameworks_and_drivers/: server.py
mcp_server/frameworks_and_drivers/mcp/: server.py  tool_descriptions.py
mcp_server/interface_adapters/controllers/: mcp_tools.py
mcp_server/interface_adapters/gateways/: in_memory_event_repo.py
mcp_server/interface_adapters/presenters/: event_presenter.py
mcp_server/interface_adapters/services/: patch_relative.py  tool_envelopes.py  tool_helpers.py  tool_text.py
mcp_server/usecases/: interactors.py  models.py  ports.py  ports_oauth.py
(+569 files in other folders)
