[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "google-auth>=2.40.3",
    "httpx>=0.28.1",
    "mcp>=1.13.0",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0",
    "tzdata>=2025.2",
    "uvicorn>=0.35.0",
]
