[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "google-auth>=2.40.3",
    "httpx[http2]>=0.28.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "mcp>=1.13.0",
    "pgvector>=0.2.5",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0",
    "tzdata>=2025.2",
    "uvicorn>=0.35.0",
]
